# waywallen

./: .gitignore  BUILD.md  Cargo.toml  README.CN.md  README.md  deps.json  environment.yml
.github/workflows/: appimage.yml  release.yml
bridge/include/waywallen-bridge/: bridge.h  ipc_v1.h  (+1 more)
bridge/src/: bridge.c  ipc_v1.c  log_internal.h  pool.c  pool_egl_gbm.c  pool_vulkan.c
cmake/: CPackConfig.cmake
plugins/mpv/: CMakeLists.txt
plugins/video/: CMakeLists.txt
plugins/video/renderers/: waywallen-video.toml
plugins/video/sources/: video.lua
plugins/video/src/: main.cpp
proto/: control.proto  filter.proto
protocol/: waywallen_ipc_v1.xml
scripts/: build_appimage.sh  build_ffmpeg.sh
src/: control.rs  dbus_iface.rs  display_endpoint.rs  error.rs  events.rs  ipc_generated.rs  lib.rs  main.rs  negotiate.rs  probe_task.rs  renderer_manager.rs  settings.rs  ws_server.rs
src/display/: endpoint.rs
src/dma/: negotiate.rs
src/ipc/: uds.rs
src/model/: filter.rs  fts.rs  mod.rs  repo.rs  sync.rs
src/playlist/: resolve.rs
src/plugin/: renderer_registry.rs  source_manager.rs
src/probe/: media.rs  mod.rs  stat.rs  task.rs
src/routing/: router.rs
tests/: display.rs  display_sync_fd_fanout.rs  display_sync_fd_single.rs  dmabuf_roundtrip_e2e.rs  ipc_renderer.rs  ipc_renderer_lifecycle.rs  probe_real.rs  release_syncobj_e2e.rs
ui/: CMakeLists.txt  deps.json
ui/cmake/: FetchDeps.cmake
ui/qml/: Window.qml
ui/src/: daemon_dbus.cpp  daemon_dbus.cppm  display.cpp  display.cppm  mod.cppm  notify.cpp  notify.cppm  proto.cppm  util.cpp  util.cppm
(+36 files in other folders)
